--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "biltong": "^0.4.0",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.1",
     "element-theme-chalk": "^2.0.3",
     "element-ui": "^2.0.3",
     "endpoint": "^0.4.5",
@@ -24,6 +25,8 @@
     "stylus-relative-loader": "^3.4.0",
     "util": "^0.10.3",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.0.0",
+    "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
